fixed horizontal scroll on about page

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -51,6 +51,7 @@ p{
     max-width: 60%;
     max-height: 30%; 
     overflow: scroll;
+    margin: 0;
 }
 
 
@@ -68,8 +69,8 @@ div.container{
     top :80%;
     left:35%;
     width: 50%;
-    transform: translate(-50%,-50%); 
-    margin:auto;
+    transform: translate(-50%,-50%);
+    max-width: 460px;
 }
 
 #pic{
@@ -99,6 +100,7 @@ div.container{
         top :50%;
         left:70%;
         width: 100%;
+        margin:0;
         transform: translate(-50%,-50%);
         text-align: justify;
     }
@@ -116,7 +118,23 @@ div.container{
         top :60%;
         left:70%;
         width: 100%;
+        margin: 0;
         transform: translate(-50%,-50%);
         text-align: justify;
+        max-width: 350px;
+    }
+}
+
+@media only screen and (max-width:550px){
+    .centered{
+        display: block;
+        position: absolute;
+        top :60%;
+        left:70%;
+        width: 100%;
+        margin: 0;
+        transform: translate(-50%,-50%);
+        text-align: justify;
+        max-width: 250px;
     }
 }
